# DLOSeg

./: .gitignore  .gitmodules  README.md  graph_test.ipynb  isaac_code.py  pyproject.toml  requirements.txt  setup.py  setup_all.sh  setup_all_new.sh  test.py  test2.ipynb
.basedpyright/: baseline.json
DATASETS/LABD_Real/: ScenePose.json
DATASETS/LABD_Real/json/: temp0.json  temp11.json  temp12.json  temp14.json  temp18.json  temp2.json  temp20.json  temp5.json  temp8.json  temp9.json
DATASETS/LABD_Syn/json/: temp1.json  temp10.json  temp13.json  temp15.json  temp16.json  temp19.json  temp3.json  temp4.json  temp7.json
docs/: 01_overview.md  02_setup.md  03_pipeline_graph.md  04_segmentation.md  05_stereo_3d.md  06_datasets.md  07_scripts.md  README.md
examples/: dlo_deform_demo.py
outputs/grounded_sam2_local_demo/: grounded_sam2_local_image_demo_results.json
outputs_old/grounded_sam2_local_demo/: grounded_sam2_local_image_demo_results.json
scripts/: benchmark_sbhc.py  extract_spline.py  extract_spline_video.py  recon3d_demo.py  recon3d_eval.py  video_to_frames.py  zed_svo_export.py
src/bspline/: bspline_torch.py  gen_bspline.py  main.py  test copy.py  test.ipynb  test.py
src/bspline/loss/: loss.py
src/bspline/models/: models.py
src/bspline/train/: train.py
src/clipseg/: Quickstart.ipynb
src/clipseg/models/: clipseg.py
src/der/: der_util.py  dlo_simulator_python.py  main.py  utils.py  wire_leagth.py
src/der/dder/: DEFORM_func.py  DEFORM_sim.py  train_DEFORM.py  util.py
src/digit/: main.py
src/dloseg/: __init__.py  pyproject.toml  setup.py
src/dloseg/dloseg/: adapter.py  test.ipynb
src/dloseg/graph/: bspline_3d_recon.py  bspline_fitting.py  dlo_graph.py  pipeline.py
src/dloseg/models/: adapters.py  cllasifire.py  dlo_seg_model.py  sam2_class.py  test_sam.ipynb
src/dloseg/recon3d/: bspline_3d_recon.py  frame_io.py  projection_recon.py  reprojection.py  stereo.py
src/dloseg/tests/: test_dloseg.py
src/dloseg/zed/calibration_data/: zed_2i_cal_data.yaml
src/dloseg/zed/camera_streaming/receiver/: reciver.py
src/dloseg/zed/camera_streaming/sender/: streaming_sender.py
src/dloseg/zed/depth/: depth_sensing.py  depth_to_point_cloud.py  stereo_to_point_cloud.py  test.ipynb
src/dloseg/zed/record/: svo_recording.py
src/dloseg/zed/utils/: utils.py
src/dloseg/zed/zed_images/: svo_export.py
src/graph/: bspline_3d_recon.py  bspline_fitting.py  dlo_graph.py  fast_branch_smoothing.py  main.py  main_full_ds.py  main_new.py  main_video.py  video_to_image.py
src/graph/utils/: utils.py
src/graph_3d/: main.py  segmentor.py
src/my_mBEST/skeletonize/: skeletonize.py
src/my_mBEST/utils/: utils.py
src/rgb_to_graph/: eval.py  main.py  models.py  train.py
src/sam2_rt/: __init__.py  setup.py
src/sam2_rt/demo/: demo.py
src/sam2_rt/notebooks/: image_predictor_example.ipynb
src/sam2_rt/sam2/: __init__.py  sam2_image_predictor.py
src/sam2_rt/sam2/modeling/: sam2_base.py
src/sam2_rt/sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
src/segmentors/: full_pipe_line.py
src/segmentors/GroundingDINO/: main.py
src/segmentors/MobileSAMv2/: Inference.py
src/segmentors/MobileSAMv2/efficientvit/apps/: setup.py
src/segmentors/MobileSAMv2/efficientvit/apps/data_provider/: base.py
src/segmentors/MobileSAMv2/efficientvit/apps/data_provider/random_resolution/: controller.py
src/segmentors/MobileSAMv2/efficientvit/apps/trainer/: base.py  run_config.py
src/segmentors/MobileSAMv2/efficientvit/apps/utils/: dist.py  ema.py  lr.py  metric.py
src/segmentors/MobileSAMv2/efficientvit/models/efficientvit/: backbone.py  cls.py  sam.py  seg.py
src/segmentors/MobileSAMv2/efficientvit/models/nn/: act.py  drop.py  norm.py  ops.py
src/segmentors/MobileSAMv2/efficientvit/models/utils/: network.py
src/segmentors/MobileSAMv2/mobilesamv2/: build_sam.py  predictor.py
src/segmentors/MobileSAMv2/mobilesamv2/promt_mobilesamv2/: model.py  predict.py
src/segmentors/MobileSAMv2/ultralytics/: __init__.py
src/segmentors/MobileSAMv2/ultralytics/hub/: __init__.py  auth.py  utils.py
src/segmentors/MobileSAMv2/ultralytics/nn/: tasks.py
src/segmentors/MobileSAMv2/ultralytics/vit/utils/: ops.py
src/segmentors/MobileSAMv2/ultralytics/yolo/engine/: model.py  trainer.py
src/segmentors/MobileSAMv2/ultralytics/yolo/utils/: autobatch.py  checks.py  loss.py
src/segmentors/MobileSAMv2/ultralytics/yolo/v8/: __init__.py
src/segmentors/MobileSAMv2/ultralytics/yolo/v8/classify/: __init__.py
src/wire_legnth/: der.py  wire_leght.py
src/zed/: test.py  zed_camera.py
src/zed/calibration_data/: cal_data.yaml
src/zed/camera streaming/receiver/: reciver.py
src/zed/depth/: depth_sensing.py  depth_to_point_cloud.py  test.ipynb
src/zed/zed_images/: svo_export.py
tests/: conftest.py  test_projection_recon.py  test_reprojection.py
