# pyproject.toml

[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dlo_seg"
version = "0.1.0"
description = "A toolkit for segmentation and analysis of deformable linear objects in robotics"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

authors = [
  { name = "Your Name", email = "you@domain.com" }
]
maintainers = [
  { name = "Your Name", email = "you@domain.com" }
]
keywords = ["robotics", "DLO", "segmentation", "computer-vision"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# All tools—dev, geometry, vision—now live here
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "opencv-contrib-python",
  "timm",
  "albumentations",
  "scikit-learn",
  "networkx",
  "matplotlib",
  "python3-tk",
  "tqdm",
  "hydra-core",
  "iopath",
  "pillow",
  "pyyaml",
  "ruamel.yaml",
  "open3d",
  "trimesh",
  "transformers",
  "einops",
  "gdown",
  "supervision",
  "pycocotools",
  "imageio",
  "addict",
  "yapf",
  "typeguard"
]

# setuptools-specific in-TOML options
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dlo_seg*"]
