# pyproject.toml

[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dloseg"
version = "0.1.0"
description = "A toolkit for segmentation and analysis of deformable linear objects in robotics"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Rotem Atari", email = "rotem.atri@gmail.com" }
]
keywords = ["robotics", "DLO", "segmentation", "computer-vision"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# All tools—dev, geometry, vision—now live here
dependencies = [
  "torch",
  "torchvision",
  "groundingdino-py",
  "torchpack",
  "onnx",
  "onnxsim",
  "numpy",
  "scipy",
  "scikit-image",
  "opencv-contrib-python",
  "timm",
  "albumentations",
  "scikit-learn",
  "networkx",
  "matplotlib",
  "tqdm",
  "hydra-core",
  "iopath",
  "pillow",
  "pyyaml",
  "ruamel.yaml",
  "open3d",
  "trimesh",
  "transformers",
  "einops",
  "gdown",
  "supervision",
  "pycocotools",
  "imageio",
  "addict",
  "yapf",
  "typeguard"
]

# setuptools-specific in-TOML options
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dloseg*"]
