# pyproject.toml

[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dloseg"
version = "0.1.0"
description = "A toolkit for segmentation and analysis of deformable linear objects in robotics"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Rotem Atari", email = "rotem.atri@gmail.com" }
]
keywords = ["robotics", "DLO", "segmentation", "computer-vision"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# All tools—dev, geometry, vision—now live here
dependencies = [
  "torch",
  "torchvision",
  "groundingdino-py",
  "torchpack",
  "onnx",
  "onnxsim",
  "numpy",
  "scipy",
  "scikit-image",
  "opencv-contrib-python",
  "timm",
  "albumentations",
  "scikit-learn",
  "networkx",
  "matplotlib",
  "tqdm",
  "hydra-core",
  "iopath",
  "pillow",
  "pyyaml",
  "ruamel.yaml",
  "open3d",
  "trimesh",
  "transformers",
  "einops",
  "gdown",
  "supervision",
  "pycocotools",
  "imageio",
  "addict",
  "yapf",
  "typeguard"
]

# setuptools-specific in-TOML options
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dloseg*"]

[dependency-groups]
dev = [
    "basedpyright>=1.8",
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py310"          # match requires-python >=3.10
# src/segmentors is vendored third-party (MobileSAMv2/ultralytics/efficientvit);
# do not lint or reformat it.
extend-exclude = ["src/segmentors", "**/*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]   # pyflakes, pycodestyle, isort, bugbear, pyupgrade, simplify
ignore = ["E501"]                 # let the formatter own line length

[tool.pytest.ini_options]
testpaths = ["tests"]
# A sourced ROS 2 workspace leaks its pytest plugins onto PYTHONPATH; several
# fail to import (missing deps) and crash collection. Disable the ROS-origin
# plugins so the suite runs regardless of the shell environment.
addopts = "-p no:launch_testing -p no:launch_pytest -p no:launch_ros -p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257 -p no:ament_lint -p no:ament_xmllint"

[tool.basedpyright]
typeCheckingMode = "standard"     # NOT "recommended"/"all" — too noisy for scientific code
pythonVersion = "3.10"            # match requires-python >=3.10
include = ["src", "tests", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "scratch", "notebooks", "src/segmentors", "**/*.egg-info"]
